--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  min-height: 500px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 30px;
+}
+
+.App input {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+  font-size: 20px;
+}
+
+.App input:focus {
+  outline: none;
+}
+
+.App button {
+  padding: 20px;
+  border-radius: 10px;
+  border:none;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: #333;
 }
