--- a/client/src/Pages/styles.css
+++ b/client/src/Pages/styles.css
@@ -19,7 +19,7 @@
 }
 
 .App {
-  min-height: 100vh;
+  margin: 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,6 +33,7 @@
   align-items: center;
   gap: 30px;
   margin: 30px 0;
+  padding: 0 20px;
 }
 
 .input-container input {
@@ -40,7 +41,7 @@
   border-radius: 30px;
   border: 1px solid #33333388;
   font-size: 16px;
-  width: 350px;
+  width: 300px;
   height: 50px;
   padding: 0 20px;
 }
@@ -64,6 +65,24 @@
 
 .input-container button:hover {
   background-color: #333333d3;
+}
+
+.all-users {
+  width: 50%;
+}
+
+.delete-user-btn {
+  padding: 10px 15px;
+  background-color: #b50000;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.delete-user-btn:hover {
+  background-color: #b90000a2;
 }
 
 .repos-list {
@@ -90,7 +109,9 @@
 .follower-list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px 0;
+  width: 80%;
 }
 
 .follower-list p {
@@ -99,6 +120,7 @@
   font-size: 20px;
   text-transform: capitalize;
   cursor: pointer;
+  max-width: 200px;
 }
 
 .follower-list p:hover {
@@ -142,7 +164,11 @@
 .repo div h2 {
   font-weight: 500;
   margin-bottom: 10px;
+  width: 250px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
+
 .repo div p {
   color: #484848;
 }
@@ -156,5 +182,13 @@
 @media (max-width: 768px) {
   .repos-list {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .repo {
+    width: 100%;
+  }
+
+  .all-users {
+    width: 100%;
   }
 }
